# HydraAPI-tests

./: .gitignore  CMakeLists.txt  Camera.h  README.md  RenderDriverOpenGL1.cpp  RenderDriverOpenGL1.h  RenderDriverOpenGL1Debug.cpp  RenderDriverOpenGL1DebugDrawRays.cpp  RenderDriverOpenGL1_DelayedLoad.cpp  RenderDriverOpenGL1_DrawBvhLevels.cpp  RenderDriverOpenGL1_TestCustomAttributes.cpp  RenderDriverOpenGL1_TestSplit.cpp  RenderDrivers.cpp  RenderDrivers.h  Report_3dsmax.txt  Timer.cpp  input.cpp  main.cpp  mesh_utils.cpp  opengl_init.cpp  reportStyle.css  test_image_processing.cpp  test_lights3.cpp  test_lights4.cpp  test_mtl_adv.cpp  tests.h  tests.sln  tests.vcxproj  tests.vcxproj.filters  tests1.cpp  tests10.cpp  tests2.cpp  tests3.cpp  tests4.cpp  tests5.cpp  tests6.cpp  tests7.cpp  tests8.cpp  tests9.cpp  testsA.cpp  (+24 more)
.github/workflows/: codacy-analysis.yml
3dsMaxTests/: 003_geosphere_smooth_normals.max  004_test_shadow_offset_and_640x480.max  005_tilt_correction_1280x720.max  006_dof_and_1024x768.max  007_phong_glossy_and_mirror_640x480.max  008_phong_glossy_and_mirror_1024x768.max  009_blinn_glossy_and_mirror_640x480.max  011_normals_subdivisons.max  012_glossy_zero.max  014_hydra_mat_bump-height.max  015_hydra_mat_bump-normal.max  018_diffuse_vs_full-glossy.max  019_light_near_surface.max  031_hydra_mat_Fresnel-IOR.max  033_hydra_mat_Oren-Nayar.max  034_hydra_mat_Microfacet.max  038_Opacity.max  043_cornell_normals.max  044_glossy_do_not_compress_normals.max  047_normalmap_with_zero.max  064_UVW.max  067_BumpOnNotFlat.max  308_emiss_photometr_meshLight_hydraLight.max  309_meshLight_with_texture.max  310_MeshLight.max  311_direct_light_caustic.max  313_HydraPortal.max  325_liquid_light.max  ExportModelsTo_vsgf.ms
3dsMaxTests/001_Diffuse_LT/: statex_00001.xml
3dsMaxTests/002_BlendBox_bump/: statex_00001.xml
3dsMaxTests/003_geosphere_smooth_normals/: change_00000.xml  statex_00001.xml
3dsMaxTests/004_test_shadow_offset_and_640x480/: change_00000.xml  statex_00001.xml
3dsMaxTests/005_tilt_correction_1280x720/: change_00000.xml  statex_00001.xml
3dsMaxTests/006_dof_and_1024x768/: change_00000.xml  change_00001.xml  statex_00002.xml
3dsMaxTests/007_phong_glossy_and_mirror_640x480/: change_00000.xml  change_00001.xml  statex_00001.xml
3dsMaxTests/008_phong_glossy_and_mirror_1024x768/: change_00000.xml  statex_00001.xml
3dsMaxTests/009_blinn_glossy_and_mirror_640x480/: change_00000.xml  statex_00001.xml
3dsMaxTests/011_normals_subdivisons/: change_00000.xml  statex_00001.xml
3dsMaxTests/012_glossy_zero/: change_00000.xml  statex_00001.xml
3dsMaxTests/014_hydra_mat_bump-height/: change_00000.xml  statex_00001.xml
3dsMaxTests/015_hydra_mat_bump-normal/: change_00000.xml  statex_00001.xml
3dsMaxTests/018_diffuse_vs_full-glossy/: change_00000.xml  statex_00001.xml
3dsMaxTests/019_light_near_surface/: change_00000.xml  statex_00001.xml
3dsMaxTests/020_BlackBackEnvir_bugBack/: change_00000.xml  statex_00001.xml
3dsMaxTests/031_hydra_mat_Fresnel-IOR/: change_00000.xml  statex_00001.xml
3dsMaxTests/033_hydra_mat_Oren-Nayar/: change_00000.xml  statex_00001.xml
3dsMaxTests/034_hydra_mat_Microfacet/: change_00000.xml  statex_00001.xml
3dsMaxTests/038_Opacity/: change_00000.xml  statex_00001.xml
3dsMaxTests/043_cornell_normals/: statex_00001.xml
3dsMaxTests/044_glossy_do_not_compress_normals/: change_00000.xml  statex_00001.xml
3dsMaxTests/045_flip_normals/: statex_00001.xml
3dsMaxTests/046_flip_normals_IBPT/: change_00000.xml  statex_00001.xml
3dsMaxTests/047_normalmap_with_zero/: change_00000.xml  statex_00001.xml
3dsMaxTests/064_UVW/: change_00000.xml  statex_00001.xml
3dsMaxTests/067_BumpOnNotFlat/: change_00000.xml  statex_00001.xml
3dsMaxTests/308_emiss_photometr_meshLight_hydraLight/: change_00000.xml  statex_00001.xml
3dsMaxTests/309_meshLight_with_texture/: change_00000.xml  statex_00001.xml
3dsMaxTests/310_MeshLight/: change_00000.xml  statex_00001.xml
3dsMaxTests/311_direct_light_caustic/: change_00000.xml  statex_00001.xml
3dsMaxTests/313_HydraPortal/: change_00000.xml  statex_00001.xml
3dsMaxTests/325_liquid_light/: change_00000.xml  statex_00001.xml
3dsMaxTests/327_Anisotropy_and_AreaLight_2/: change_00001.xml  statex_00001.xml
3dsMaxTests/328_AO_2_blends/: change_00001.xml  statex_00001.xml
3dsMaxTests/329_BlendedBox/: change_00001.xml  statex_00001.xml
3dsMaxTests/330_CornellBoxWithSphereCylinderTeapot/: change_00001.xml  statex_00001.xml
3dsMaxTests/332_Furnace_Lambert_areaLight/: change_00001.xml
3dsMaxTests/332_Furnance_Lambert_areaLight/: statex_00002.xml
3dsMaxTests/333_Furnace_reflect_Beckmann/: statex_00001.xml
3dsMaxTests/333_Furnance_reflect_Beckmann/: statex_00004.xml
3dsMaxTests/334_Furnance_reflect_Beckmann_areaLight/: change_00003.xml  statex_00001.xml  statex_00002.xml
3dsMaxTests/335_Furnance_reflect_GGX/: change_00001.xml  statex_00001.xml  statex_00002.xml
3dsMaxTests/336_Furnance_reflect_GGX_areaLight/: change_00001.xml  statex_00001.xml
3dsMaxTests/337_Furnance_reflect_Phong/: statex_00001.xml
3dsMaxTests/338_Furnace_reflect_Phong_areaLight/: statex_00001.xml
3dsMaxTests/338_Furnance_reflect_Phong_areaLight/: change_00002.xml  statex_00001.xml  statex_00002.xml
3dsMaxTests/339_Furnace_reflect_TorrSparr/: statex_00001.xml
3dsMaxTests/339_Furnance_reflect_TorrSparr/: statex_00001.xml
3dsMaxTests/340_Furnace_reflect_TorrSparr_areaLight/: statex_00001.xml
3dsMaxTests/340_Furnance_reflect_TorrSparr_areaLight/: statex_00001.xml
3dsMaxTests/341_Furnace_reflect_TRGGX/: statex_00001.xml
3dsMaxTests/341_Furnance_reflect_TRGGX/: statex_00001.xml
3dsMaxTests/342_Furnance_reflect_TRGGX_areaLight/: statex_00001.xml  statex_00002.xml
3dsMaxTests/343_Furnance_transp/: statex_00001.xml
Report/: AllReports.html  All_reports.html  Menu.html  Report_3dsmax.txt  Report_api_windows.html  Report_geometry_windows.html  Report_lights_windows.html  Report_materials_windows.html  Report_ralgs_windows.html  Report_vector_textures_windows.html  reportStyle.css
(+425 files in other folders)
